# N-Body-Simulator

./: Cargo.toml  README.md  run.ps1  run.sh  run_lin.sh  run_win.ps1
.github/workflows/: rust.yml
src/: main.rs
src/engine/: engine.rs
src/gui/: engine.rs
src/physics/: gravity.rs
src/terminal/: cli.rs
src/types/: mod.rs  nbodysystem.rs  particle.rs
